[package]
name = "pyroxide_rs"
version = "0.1.0"
authors = ["axect <axect@outlook.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pyroxide_rs"
crate-type = ["dylib"]

[dependencies.peroxide]
version = "0.19"
features = ["O3"]
